# tueda.github.io

./: .gitignore  .gitmodules  404.html  Makefile  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
bibtex/: bulletins.bib  intl-talks.bib  other-talks.bib  papers.bib  preprints.bib  proceedings.bib  seminars.bib  thesis.bib
css/: extra.css
cv/: index.html
docs/: cv.md  index.md  misc.md  publications.md  software.md  talks.md
docs/bibtex/: intl-talks.bib  other-talks.bib  papers.bib  preprints.bib  proceedings.bib  release-notes.bib  seminars.bib  thesis.bib
docs/css/: extra.css
docs/js/: katex-start.js
ext/: mdx_bibtex.py
js/: eads-start.js  social-links.js
latex/: .gitignore  .latex.mk  Makefile  activity_list.tex
latex/bib/: Makefile
misc/: index.html
overrides/: 404.html
overrides/.icons/: academicons
publications/: index.html
python/: mdx_bibtex.py
search/: search_index.json
software/: index.html
talks/: index.html
