[tool.poetry]
name = "tueda.github.io"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"

bibtexparser = "^1.3.0"
markdown-include = "^0.7.0"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
