[tool.poetry]
name = "tueda.github.io"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"

bibtexparser = "^1.4.0"
markdown-include = "^0.8.0"
mkdocs = "^1.4.2"
mkdocs-exclude = "^1.0.2"
mkdocs-material = "^9.0.2"  # theme should be consistent with "overrides"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
