[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.0"

bibtexparser = "^1.4.3"
markdown-include = "^0.8.1"
mkdocs = "^1.6.1"
mkdocs-exclude = "^1.0.2"
mkdocs-material = "^9.5.50" # theme should be consistent with "overrides"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
